--- a/html-css/modul-09/index.html
+++ b/html-css/modul-09/index.html
@@ -10,7 +10,7 @@
 <body>
     <section class="header">
         <div class="content">
-            <nav class="navigation-header">
+            <nav class="header__navigation-header navigation-header">
                 <div class="menu-header">
                     <a href="" class="menu-header__link">Log in</a>
                     <a href="" class="menu-header__link">Sign up</a>
@@ -19,48 +19,50 @@
                     <a class="logo__link" href="#">URLAUBSGLÜCK</a>
                 </div>
             </nav>
-            <div class="header-text">
-                <p class="header-text__title">Share your holiday dreams</p>
-                <p class="header-text__subtitle">And find the perfect partner to fullfill it</p>
+            <div class="header__text">
+                <p class="header__title">Share your holiday dreams</p>
+                <p class="header__subtitle">And find the perfect partner to fullfill it</p>
             </div>
-            <a href="#" class="content__header-button">Find your holiday partner</a>
+            <a href="#" class="header__button">Find your holiday partner</a>
         </div>
     </section>
 
     <section class="content">
-            <h2 class="content__title">Meet a partner for your best holiday</h2>
-        <div class="body">
-            <article class="box">
-                <div class="box__image box__icon-shape_1">
-                    <img src="../modul-08/img/Layer6.png" alt="picture1" class="box_pic">
+        <div class="main">
+            <h2 class="main__title">Meet a partner for your best holiday</h2>
+        <div class="main__page page">
+            <article class="page__column column">
+                <div class="column__image column__icon-shape_1">
+                    <img src="../modul-08/img/Layer6.png" alt="picture1" class="column_pic">
                 </div>
-                <h3 class="box__title">Bradley Hunter</h3>
-                <p class="box__subtitle">Based in Chicago. I love playing tennis and loud music.</p>
+                <h3 class="column__title">Bradley Hunter</h3>
+                <p class="column__subtitle">Based in Chicago. I love playing tennis and loud music.</p>
             </article>
-            <article class="box">
-                <div class="box__image box__icon-shape_2">
-                    <img src="../modul-08/img/Layer8.png" alt="picture1" class="box_pic">
+            <article class="page__column column">
+                <div class="column__image column__icon-shape_2">
+                    <img src="../modul-08/img/Layer8.png" alt="picture1" class="column_pic">
                 </div>
-                <h3 class="box__title">Lucas Marsha</h3>
-                <p class="box__subtitle">I get my inspiration from nature and objects around me. I have a passion to
+                <h3 class="column__title">Lucas Marsha</h3>
+                <p class="column__subtitle">I get my inspiration from nature and objects around me. I have a passion to
                     colours, typography and skateboards.</p>
             </article>
-            <article class="box">
-                <div class="box__image box__icon-shape_3">
-                    <img src="../modul-08/img/Layer7.png" alt="picture1" class="box_pic">
+            <article class="page__column column">
+                <div class="column__image column__icon-shape_3">
+                    <img src="../modul-08/img/Layer7.png" alt="picture1" class="column_pic">
                 </div>
-                <h3 class="box__title">Heather Walker</h3>
-                <p class="box__subtitle">I'm a happy person that loves cats and climbing on mountains.</p>
+                <h3 class="column__title">Heather Walker</h3>
+                <p class="column__subtitle">I'm a happy person that loves cats and climbing on mountains.</p>
             </article>
-            <article class="box">
-                <div class="box__image box__icon-shape_4">
-                    <img src="../modul-08/img/Layer10.png" alt="picture1" class="box_pic">
+            <article class="page__column column">
+                <div class="column__image column__icon-shape_4">
+                    <img src="../modul-08/img/Layer10.png" alt="picture1" class="column_pic">
                 </div>
-                <h3 class="box__title">Bradley Hunter</h3>
-                <p class="box__subtitle">Based in Chicago. I love playing tennis and loud music.</p>
+                <h3 class="column__title">Bradley Hunter</h3>
+                <p class="column__subtitle">Based in Chicago. I love playing tennis and loud music.</p>
             </article>
         </div>
-        <button class="content__button-and">See other partners</button>
+        <button class="main__button-and">See other partners</button>
+    </div>
     </section>
 </body>
 
