--- a/html-css/modul-09/index.html
+++ b/html-css/modul-09/index.html
@@ -25,7 +25,7 @@
             <div class="header-text row">
                 <h2 class="header-title col-12">Share your holiday dreams</h2>
                 <p class="header-subtitle col-12">And find the perfect partner to fullfill it</p>
-                <div class="col-12 col-md-4">
+                <div class="col-12">
                     <a href="#" class="header-button">Find your holiday partner</a>
                 </div>
             </div>
@@ -71,7 +71,7 @@
             </article>
         </div>
         <div class="row">
-            <div class="col-12 col-md-4">
+            <div class="col-12">
                 <button class="button-and">See other partners</button>
             </div>
         </div>
