--- a/html-css/modul-09/index.html
+++ b/html-css/modul-09/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <section class="baner">
+    <section class="baner navigation-header">
         <div class="container">
             <nav class="row navigation-header">
                 <ul class="menu-header col-12 col-md-4 col-lg-3">
@@ -23,8 +23,11 @@
                 </div>
             </nav>
             <div class="header-text row">
-                <h2 class="header-title col-12">Share your holiday dreams</h2>
-                <p class="header-subtitle col-12">And find the perfect partner to fullfill it</p>
+                <div class="col-12">
+                    <h2 class="header-title">Share your <span class="span-header-text">holiday dreams</span> </h2>
+                    <p class="header-subtitle">And find the perfect partner <span class="span-header-subtitle">to
+                            fullfill it</span> </p>
+                </div>
                 <div class="col-12">
                     <a href="#" class="header-button">Find your holiday partner</a>
                 </div>
@@ -39,15 +42,16 @@
                 <h2 class="main-title">Meet a partner for your best holiday</h2>
             </div>
         </div>
-        <div class="row column">
-            <article class="col-12 col-md-6 col-lg-3">
+        <div class="row column justify-content-center">
+            <div class="null col-12 col-md-1 col-lg-12"></div>
+            <article class="column-item col-12 col-md-4 col-lg-3">
                 <div class="column-image icon-shape_1">
                     <img src="../modul-09/img/Layer6.png" alt="picture1" class="column-pic">
                 </div>
                 <h3 class="column-title">Bradley Hunter</h3>
                 <p class="column-subtitle">Based in Chicago. I love playing tennis and loud music.</p>
             </article>
-            <article class="col-12 col-md-6 col-lg-3">
+            <article class="column-item col-12 col-md-4 col-lg-3">
                 <div class="column-image icon-shape_2">
                     <img src="../modul-09/img/Layer8.png" alt="picture2" class="column-pic">
                 </div>
@@ -55,20 +59,22 @@
                 <p class="column-subtitle">I get my inspiration from nature and objects around me. I have a passion to
                     colours, typography and skateboards.</p>
             </article>
-            <article class="col-12 col-md-6 col-lg-3">
+            
+            <article class="column-item col-12 col-md-4 col-lg-3">
                 <div class="column-image icon-shape_3">
                     <img src="../modul-09/img/Layer7.png" alt="picture3" class="column-pic">
                 </div>
                 <h3 class="column-title">Heather Walker</h3>
                 <p class="column-subtitle">I'm a happy person that loves cats and climbing on mountains.</p>
             </article>
-            <article class="col-12 col-md-6 col-lg-3">
+            <article class="column-item col-12 col-md-4 col-lg-3">
                 <div class="column-image icon-shape_4">
                     <img src="../modul-09/img/Layer10.png" alt="picture4" class="column-pic">
                 </div>
                 <h3 class="column-title">Bradley Hunter</h3>
                 <p class="column-subtitle">Based in Chicago. I love playing tennis and loud music.</p>
             </article>
+            
         </div>
         <div class="row">
             <div class="col-12">
