--- a/html-css/modul-08/index.html
+++ b/html-css/modul-08/index.html
@@ -20,44 +20,49 @@
                 <div class="logo">
                     <a class="header-title" href="#">URLAUBSGLÜCK</a>
                 </div>
-                </nav>
-                    <div class="header-text">
-                    <p class="title-text">Share your holiday dreams</p>
-                    <p class="title-text-text">And find the perfect partner to fullfill it</p>
-                </div>
-                <a href="#" class="header-button">Find your holiday partner</a>
-            
+            </nav>
+            <div class="header-text">
+                <p class="title-text">Share your holiday dreams</p>
+                <p class="title-text-text">And find the perfect partner to fullfill it</p>
+            </div>
+            <a href="#" class="header-button">Find your holiday partner</a>
+
         </div>
     </section>
 
     <section class="content">
         <h3 class="title-main">Meet a partner for your best holiday</h3>
-<div class="flex">
-        <article class="divide">
-            <div class="picture icon-shape_1"><img src="../modul-08/img/Layer6.png" alt="picture1" class="pict"></div>
-            <h3 class="title-pict">Bradley Hunter</h3>
-            <p class="pict-text">Based in Chicago. I love playing tennis and loud music.</p>
-        </article>
+        <div class="flex">
+            <article class="divide">
+                <div class="picture icon-shape_1"><img src="../modul-08/img/Layer6.png" alt="picture1" class="pict">
+                </div>
+                <h3 class="title-pict">Bradley Hunter</h3>
+                <p class="pict-text">Based in Chicago. I love playing tennis and loud music.</p>
+            </article>
 
-        <article class="divide">
-            <div class="picture icon-shape_2"><img src="../modul-08/img/Layer8.png" alt="picture1" class="pict"></div>
-            <h3 class="title-pict">Lucas Marsha</h3>
-            <p class="pict-text">I get my inspiration from nature and objects around me. I have a passion to colours,
-                typography and skateboards.</p>
-        </article>
+            <article class="divide">
+                <div class="picture icon-shape_2"><img src="../modul-08/img/Layer8.png" alt="picture1" class="pict">
+                </div>
+                <h3 class="title-pict">Lucas Marsha</h3>
+                <p class="pict-text">I get my inspiration from nature and objects around me. I have a passion to
+                    colours,
+                    typography and skateboards.</p>
+            </article>
 
-        <article class="divide">
-            <div class="picture icon-shape_3"><img src="../modul-08/img/Layer7.png" alt="picture1" class="pict"></div>
-            <h3 class="title-pict">Heather Walker</h3>
-            <p class="pict-text">I'm a happy person that loves cats and climbing on mountains. </p>
-        </article>
+            <article class="divide">
+                <div class="picture icon-shape_3"><img src="../modul-08/img/Layer7.png" alt="picture1" class="pict">
+                </div>
+                <h3 class="title-pict">Heather Walker</h3>
+                <p class="pict-text">I'm a happy person that loves cats and climbing on mountains. </p>
+            </article>
 
-        <article class="divide">
-            <div class="picture icon-shape_4"><img src="../modul-08/img/Layer10.png" alt="picture1" class="pict"></div>
-            <h3 class="title-pict">Bradley Hunter</h3>
-            <p class="pict-text">Based in Chicago. I love playing tennis and loud music.</p>
-        </article>
-    </div>
+            <article class="divide">
+                <div class="picture icon-shape_4"><img src="../modul-08/img/Layer10.png" alt="picture1" class="pict">
+                </div>
+                <h3 class="title-pict">Bradley Hunter</h3>
+                <p class="pict-text">Based in Chicago. I love playing tennis and loud music.</p>
+            </article>
+        </div>
         <button class="button-and">See other partners</button>
     </section>
 </body>
