--- a/html-css/modul-10/index.html
+++ b/html-css/modul-10/index.html
@@ -22,15 +22,15 @@
                     <li class="nav-header__item"><a href="#" class="nav-header__link">blog</a></li>
                     <li class="nav-header__item"><a href="#" class="nav-header__link">contact</a></li>
                     <li class="nav-header__item"><a href="#" class="nav-header__link">
-                        <svg class="nav-header__icon">
-                            <use href="../modul-10/img/symbol-defs.svg#icon-shopping"></use>
-                        </svg>
-                    </a></li>
+                            <svg class="nav-header__icon">
+                                <use href="../modul-10/img/symbol-defs.svg#icon-shopping"></use>
+                            </svg>
+                        </a></li>
                     <li class="nav-header__item"><a href="#" class="nav-header__link">
-                        <svg class="nav-header__icon">
-                            <use href="../modul-10/img/symbol-defs.svg#icon-search"></use>
-                        </svg>
-                    </a></li>
+                            <svg class="nav-header__icon">
+                                <use href="../modul-10/img/symbol-defs.svg#icon-search"></use>
+                            </svg>
+                        </a></li>
                 </ul>
             </nav>
             <section class="content-header header-text">
@@ -108,10 +108,11 @@
                 <div class="team-list">
                     <div class="team-list__wrapp">
                         <img class="team-list__picture"
-                    srcset="img/img_team/Layer1.jpg 380px, img/img_team/Layer1@2x.jpg 760px"
-                    sizes="380px"
-                    src="img/img_team/Layer1.jpg" 
-                    alt="">
+                        src="img/img_team/Layer1.jpg"
+                            srcset="img/img_team/Layer1@2x.jpg 760w,
+                            img/img_team/Layer1.jpg 380w" 
+                            sizes="380px"
+                             alt="team layer1">
                         <div class="team-img">
                             <a href="#" class="team-img__link">
                                 <svg class="team-img__icon icon-network">
@@ -141,11 +142,11 @@
 
                 <div class="team-list">
                     <div class="team-list__wrapp">
-                        <img class="team-list__picture"
-                    srcset="img/img_team/Layer2.jpg 380px, img/img_team/Layer2@2x.jpg 760px"
-                    sizes="380px"
-                    src="img/img_team/Layer2.jpg" 
-                    alt="">
+                        <img class="team-list__picture" 
+                        src="img/img_team/Layer2.jpg" 
+                        srcset="img/img_team/Layer2@2x.jpg 760w, 
+                        img/img_team/Layer2.jpg 380w" 
+                        sizes="380px" alt="team layer2">
                         <div class="team-img">
                             <a href="#" class="team-img__link">
                                 <svg class="team-img__icon icon-network">
@@ -176,10 +177,10 @@
                 <div class="team-list">
                     <div class="team-list__wrapp">
                         <img class="team-list__picture"
-                    srcset="img/img_team/Layer3.jpg 380px, img/img_team/Layer3@2x.jpg 760px"
-                    sizes="380px"
-                    src="img/img_team/Layer3.jpg" 
-                    alt="">
+                        src="img/img_team/Layer3.jpg"
+                            srcset="img/img_team/Layer3@2x.jpg 760w, img/img_team/Layer3.jpg 380w" 
+                            sizes="380px"
+                         alt="team layer3">
                         <div class="team-img">
                             <a href="#" class="team-img__link">
                                 <svg class="team-img__icon icon-network">
@@ -211,15 +212,15 @@
         </section>
     </main>
     <footer class="container footer-container footer-container--before">
-<div class="footer-container__flex">
-    <p class="footer-container__data footer-text">© 2016 MoGo free PSD template by 
-        <a href="#" class="footer-text__link">Laaqiq</a></p>
+        <div class="footer-container__flex">
+            <p class="footer-container__data footer-text">© 2016 MoGo free PSD template by
+                <a href="#" class="footer-text__link">Laaqiq</a></p>
 
-        <form class="footer-container__form forms">
-            <input class="forms__search" type="text" placeholder="Your Email...">
-            <button class="forms__button button">Subscribe</button>
-        </form>
-</div>
+            <form class="footer-container__form forms">
+                <input class="forms__search" type="text" placeholder="Your Email...">
+                <button class="forms__button button">Subscribe</button>
+            </form>
+        </div>
     </footer>
 </body>
 
